# scoped-agent-dispatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.sh  install-remote.sh  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
examples/: demo.sh  demo.yml  minimal.yml  multi-repo.yml  walkthrough.md
skills/scad/: SKILL.md
skills/scad-plan-adapt/: SKILL.md
src/scad/: __init__.py  claude_config.py  cli.py  config.py  container.py  install.py  prompts.py
src/scad/skills/: plan-adaptation.md
src/scad/templates/: .tmux.conf  Dockerfile.j2  bootstrap-claude.conf.j2  bootstrap-claude.sh  entrypoint.sh.j2  statusline.sh
src/scoped_agent_dispatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_claude_config.py  test_cli.py  test_composites.py  test_config.py  test_container.py  test_entrypoint.py  test_inject.py  test_install.py  test_integration.py  test_prompts.py  test_templates.py
