[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scoped-agent-dispatch"
version = "0.1.0"
description = "Config-driven CLI for launching Claude Code sessions in isolated Docker containers"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Vignesh Saptarishi", email = "vignesh.saptarishi@gmail.com"},
]
readme = "README.md"
keywords = ["claude", "docker", "ai", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "docker>=7.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/saptaxis/scoped-agent-dispatch"
Repository = "https://github.com/saptaxis/scoped-agent-dispatch"
Issues = "https://github.com/saptaxis/scoped-agent-dispatch/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
scad = "scad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scad = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
